--- a/MB5370 Techniques in Mar Sci 1/Module 4 Report.Rmd
+++ b/MB5370 Techniques in Mar Sci 1/Module 4 Report.Rmd
@@ -7,11 +7,15 @@ date: "2023-05-04"
 
 
 
+library(usethis)
+use_git_config(user.name = "katyajagolta", user.email = "katya.jagolta@my.jcu.edu.au")
 
 
 
 
+```{r}
 
+```
 
 
 
